fix: main screen image, scrollbar width, button border

--- a/src/components/layout/Button/Button.module.pcss
+++ b/src/components/layout/Button/Button.module.pcss
@@ -75,9 +75,9 @@
 }
 
 .primary {
-  background: linear-gradient(123deg, var(--color-primary-450) -20%, var(--color-primary-550) 100%);
-  border-color: var(--color-primary-450);
-  color: var(--color-button-text-primary);
+  background: #7335f7;
+  border-color: transparent;
+  color: var(--color-base-white);
 }
 
 .secondary {
