--- a/src/components/screens/MainScreen/MainScreen.module.pcss
+++ b/src/components/screens/MainScreen/MainScreen.module.pcss
@@ -14,7 +14,7 @@
   justify-content: space-between;
   flex-direction: row;
   border-radius: var(--st-br-card-lg);
-  background-color: var(--color-bg-main);
+  background: linear-gradient(211deg, #0f1c2a 3.64%, #120a24 30.75%, #131216 71.22%);
   padding-left: 98px;
 }
 
@@ -24,6 +24,7 @@
   .headerContainer {
     flex: 1;
     justify-content: center;
+    align-items: flex-start;
     gap: var(--sp-xl);
 
     h3 {
@@ -52,12 +53,12 @@
 
   .imgContainer {
     height: 100%;
+    align-items: flex-start;
 
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      rotate: 45deg;
     }
   }
 }
