--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -84,6 +84,7 @@ body::-webkit-scrollbar {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  scrollbar-width: none;
 }
 
 header,
